--- a/headerdevs-social/Base.lproj/Main.storyboard
+++ b/headerdevs-social/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,11 +20,114 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSt-eM-Rpo">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idea" translatesAutoresizingMaskIntoConstraints="NO" id="T7D-hf-Eit">
+                                        <rect key="frame" x="141" y="21.5" width="93" height="110"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="93" id="9ZT-oM-w2s"/>
+                                            <constraint firstAttribute="height" constant="110" id="hef-c8-QmN"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.9137254901960784" green="0.11764705882352941" blue="0.38823529411764707" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="T7D-hf-Eit" firstAttribute="centerY" secondItem="kSt-eM-Rpo" secondAttribute="centerY" constant="1.5" id="Tza-7r-vVo"/>
+                                    <constraint firstItem="T7D-hf-Eit" firstAttribute="centerX" secondItem="kSt-eM-Rpo" secondAttribute="centerX" id="hIu-V3-odO"/>
+                                    <constraint firstAttribute="height" constant="150" id="v5r-Sv-cKK"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8p-rK-cLp">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="if you haven't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P52-9M-jRK">
+                                        <rect key="frame" x="8" y="8" width="359" height="59"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.76078431372549016" green="0.094117647058823528" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="21X-B0-j3S"/>
+                                    <constraint firstItem="P52-9M-jRK" firstAttribute="top" secondItem="d8p-rK-cLp" secondAttribute="top" constant="8" id="4ic-b4-7NG"/>
+                                    <constraint firstAttribute="bottom" secondItem="P52-9M-jRK" secondAttribute="bottom" constant="8" id="I1q-wH-dmO"/>
+                                    <constraint firstItem="P52-9M-jRK" firstAttribute="leading" secondItem="d8p-rK-cLp" secondAttribute="leading" constant="8" id="wCo-11-imq"/>
+                                    <constraint firstAttribute="trailing" secondItem="P52-9M-jRK" secondAttribute="trailing" constant="8" id="zTq-Fq-zAQ"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a your sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jEv-Vt-3vU">
+                                <rect key="frame" x="16" y="170" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="uti-un-eY1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wsJ-gc-fs9">
+                                <rect key="frame" x="112.5" y="230" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="0ia-r5-1GE"/>
+                                    <constraint firstAttribute="height" constant="150" id="FfN-9u-d0Y"/>
+                                </constraints>
+                                <state key="normal" image="facebook"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ylp-pg-Toq">
+                                <rect key="frame" x="46" y="410" width="283" height="127"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Krh-v4-UUm">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="stO-Zn-EPt">
+                                        <rect key="frame" x="0.0" y="45" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIT-bb-ijT">
+                                        <rect key="frame" x="0.0" y="90" width="283" height="37"/>
+                                        <color key="backgroundColor" red="0.53333333333333333" green="0.054901960784313725" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ylp-pg-Toq" firstAttribute="top" secondItem="wsJ-gc-fs9" secondAttribute="bottom" constant="30" id="1Dn-aB-MJX"/>
+                            <constraint firstAttribute="trailing" secondItem="d8p-rK-cLp" secondAttribute="trailing" id="1fz-rz-EkP"/>
+                            <constraint firstItem="wsJ-gc-fs9" firstAttribute="top" secondItem="jEv-Vt-3vU" secondAttribute="bottom" constant="40" id="36S-Vy-qGB"/>
+                            <constraint firstItem="d8p-rK-cLp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9ys-WL-w9U"/>
+                            <constraint firstItem="jEv-Vt-3vU" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="DtF-7B-M12"/>
+                            <constraint firstItem="kSt-eM-Rpo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FFh-zH-peo"/>
+                            <constraint firstItem="ylp-pg-Toq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="G4b-sT-7mt"/>
+                            <constraint firstItem="jEv-Vt-3vU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="PqF-rz-8lp"/>
+                            <constraint firstItem="wsJ-gc-fs9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VJs-Q5-htJ"/>
+                            <constraint firstItem="ylp-pg-Toq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vdp-c0-wNJ"/>
+                            <constraint firstItem="kSt-eM-Rpo" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="W9C-jJ-d4x"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ylp-pg-Toq" secondAttribute="trailing" constant="30" id="XBj-gZ-TaZ"/>
+                            <constraint firstItem="jEv-Vt-3vU" firstAttribute="top" secondItem="kSt-eM-Rpo" secondAttribute="bottom" constant="20" id="nnj-Pk-hjt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="d8p-rK-cLp" secondAttribute="bottom" id="q9a-fL-sxD"/>
+                            <constraint firstAttribute="trailing" secondItem="kSt-eM-Rpo" secondAttribute="trailing" id="qGq-c5-xbV"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="facebook" width="256" height="256"/>
+        <image name="idea" width="512" height="512"/>
+    </resources>
 </document>
