--- a/headerdevs-social/Base.lproj/Main.storyboard
+++ b/headerdevs-social/Base.lproj/Main.storyboard
@@ -216,11 +216,12 @@
                                     <constraint firstAttribute="height" constant="65" id="uxZ-00-TB7"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="345" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KE0-8K-0LP">
-                                <rect key="frame" x="0.0" y="162" width="375" height="505"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="345" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KE0-8K-0LP">
+                                <rect key="frame" x="0.0" y="154" width="375" height="513"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="345" id="Drs-MI-Am4">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="345" id="Drs-MI-Am4" customClass="PostCell" customModule="headerdevs_social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="345"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Drs-MI-Am4" id="05y-lR-dAm">
@@ -249,7 +250,7 @@
                                                                             <color key="textColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="hFy-20-jU5" customClass="CircleView" customModule="headerdevs_social" customModuleProvider="target">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="hFy-20-jU5">
                                                                             <rect key="frame" x="257" y="0.0" width="70" height="60"/>
                                                                         </imageView>
                                                                     </subviews>
@@ -265,6 +266,9 @@
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nfl-U3-Pqt">
                                                                     <rect key="frame" x="0.0" y="202.5" width="327" height="80"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="tiZ-Ex-RG6"/>
+                                                                    </constraints>
                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -283,7 +287,7 @@
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmE-oI-lOf">
                                                                     <rect key="frame" x="33.5" y="0.0" width="36" height="22"/>
                                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
-                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
+                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
@@ -300,6 +304,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstItem="qro-7d-sD3" firstAttribute="top" secondItem="05y-lR-dAm" secondAttribute="top" constant="8" id="Gw6-Q6-0VT"/>
                                                 <constraint firstAttribute="trailing" secondItem="qro-7d-sD3" secondAttribute="trailing" constant="16" id="Hv5-nJ-Nto"/>
@@ -307,6 +312,13 @@
                                                 <constraint firstAttribute="bottom" secondItem="qro-7d-sD3" secondAttribute="bottom" constant="8" id="lBW-zW-pqW"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="caption" destination="nfl-U3-Pqt" id="NLT-Gl-nlt"/>
+                                            <outlet property="likesLbl" destination="vmE-oI-lOf" id="YIZ-qL-knp"/>
+                                            <outlet property="postImg" destination="crX-U7-fpE" id="JC4-PP-fzb"/>
+                                            <outlet property="profileImg" destination="HF0-Qu-Pkb" id="nv2-ld-nAL"/>
+                                            <outlet property="usernameLbl" destination="XaY-Ts-ELK" id="MZV-vi-qGa"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -321,11 +333,12 @@
                             <constraint firstItem="drv-ZG-mVh" firstAttribute="top" secondItem="I4O-tK-1ag" secondAttribute="bottom" constant="16" id="N0L-nX-DKY"/>
                             <constraint firstItem="I4O-tK-1ag" firstAttribute="leading" secondItem="4aT-jZ-WQm" secondAttribute="leading" id="Yel-8i-ccn"/>
                             <constraint firstAttribute="trailing" secondItem="I4O-tK-1ag" secondAttribute="trailing" id="bwy-GX-ROt"/>
-                            <constraint firstItem="KE0-8K-0LP" firstAttribute="top" secondItem="drv-ZG-mVh" secondAttribute="bottom" constant="16" id="kox-l1-sct"/>
+                            <constraint firstItem="KE0-8K-0LP" firstAttribute="top" secondItem="drv-ZG-mVh" secondAttribute="bottom" constant="8" id="kox-l1-sct"/>
                             <constraint firstItem="KE0-8K-0LP" firstAttribute="leading" secondItem="4aT-jZ-WQm" secondAttribute="leading" id="nko-Ba-J61"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="KE0-8K-0LP" id="a7g-L6-4no"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="SVw-BA-Z4K"/>
                     </connections>
                 </viewController>
